--- a/index.html
+++ b/index.html
@@ -1,13 +1,163 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="icon" href="assets/icon/tab-icon.png" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
+
+    <title>Ahadi</title>
+    <style>
+      body {
+        font-family: Poppins;
+        height: 3000px;
+      }
+
+      button > h6{
+        font-size: 15px;
+        color: rgb(66, 66, 66);
+      }
+    </style>
   </head>
-  <body>
-    <h1 class="text- font-bold underline">
-      Hello world!!
-    </h1>
+  <body class="pt-16 ps-15  pe-15">
+    <!-- Awal Navbar -->
+    <nav class="bg-white border-gray-200 fixed top-0 left-0 w-full h-16 z-50">
+      <div class="flex justify-between p-2 ml-6">
+        <a href="#home" class="flex items-center space-x-3 rtl:space-x-reverse">
+          <span class="text-2xl font-bold whitespace-nowrap text-white bg-black">AH</span>
+        </a>
+        <div class="mt-2 w-full md:block md:w-auto flex text-sm" id="navbar-default">
+          <ul class="font-medium flex flex-col items-center p-4 md:p-0 md:flex-row md:space-x-6 rtl:space-x-reverse md:mt-0 md:border-0">
+            <li>
+              <a href="#tech-stack" class="text-gray-500 rounded-sm md:border-0 hover:text-black md:p-0 md:dark:hover:bg-transparent font-normal">Tech Stack</a>
+            </li>
+            <li>
+              <a href="#experience" class="text-gray-500 rounded-sm md:border-0 hover:text-black md:p-0 md:dark:hover:bg-transparent font-normal">Experience</a>
+            </li>
+            <li>
+              <a href="#project" class="text-gray-500 rounded-sm md:border-0 hover:text-black md:p-0 md:dark:hover:bg-transparent font-normal">Projects</a>
+            </li>
+            <li>
+              <a href="" class="flex align-middle text-white bg-green-500 hover:bg-green-600 rounded-lg text-sm px-4 py-2">
+                <img class="" src="assets/icon/wa.svg" alt="" width="15px" />
+                &nbsp Let's Talk
+              </a>
+            </li>
+            <li>
+              <a href="" class="flex align-middle text-white bg-black hover:bg-gray-800 rounded-lg text-sm px-4 py-2 me-3">
+                <img src="assets/icon/download.png" alt="" class="flex align-middle" width="15px" height="20px" />
+                &nbsp Download CV
+              </a>
+            </li>
+            <li>
+              <button class="me-9 flex">
+                <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 21a9 9 0 0 1-.5-17.986V3c-.354.966-.5 1.911-.5 3a9 9 0 0 0 9 9c.239 0 .254.018.488 0A9.004 9.004 0 0 1 12 21Z" />
+                </svg>
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- Akhir Navbar -->
+
+    <!-- Hero Section Start -->
+    <section id="home" class="pt-30">
+      <div class="container">
+        <div class="flex alex-wrap">
+          <div class="w-1/2 self-start w-xs rounded-lg pt-10">
+            <img src="assets/img/mentor.png" alt="" class="rounded-xl shadow-xl/20" />
+          </div>
+          <div class="content w-7/12 ms-20">
+            <h1 class="text-6xl font-bold">Hi, I'm Ahadi 👋</h1>
+            <h2 class="text-2xl font-normal mt-5 text-gray-700">Indie Hacker & Full-Stack Developer</h2>
+            <p class="text-lg font-normal mt-5 text-gray-500">
+              I build and ship digital products from scratch to production. Passionate about creating end-to-end solutions and turning ideas into fully functional applications. With expertise in both frontend and backend development, I
+              handle everything from initial concept to deployment and maintenance.
+            </p>
+            <div class="mt-8 flex">
+              <img src="assets/icon/map.png" alt="" class="w-6" />
+              <h1 class="flex items-center ms-2 text-gray-500">Depok, Sawangan, Indonesia</h1>
+            </div>
+            <div class="mt-1 flex">
+              <img src="assets/icon/dot.png" alt="" class="w-6" />
+              <h1 class="flex items-center ms-1 text-gray-500">Available for new projects</h1>
+            </div>
+            <button class="flex space-x-4 mt-10 ms-3">
+                <a href="" class="flex align-middle text-white bg-green-500 hover:bg-green-600 rounded-lg text-lg px-7 py-3 font-medium">
+                  <img class="" src="assets/icon/wa.svg" alt="" width="20px" />
+                  &nbsp Let's Talk
+                </a>
+                <a href="" class="flex align-middle text-white bg-black hover:bg-gray-800 rounded-lg text-lg px-7 py-3 font-medium">
+                  <img src="assets/icon/download.png" alt="" class="flex align-middle" width="20px" height="15px" />
+                  &nbsp Download CV
+                </a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Hero Section End -->
+
+    <!-- Tech Stack Session Start -->
+    <section id="tech-stack" class="pt-30">
+        <h1 class="font-bold text-3xl">Tech Stack - Tools I Use Everyday</h1>
+        <div class="running-tech pt-20">
+            <marquee behavior="" direction="right" scrollamount="3" class="flex space-x-16">
+                <button class="logo">
+                    <img src="assets/icon/tech/react.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
+                    <h6>React</h6>
+                </button>
+                <button class="logo">
+                    <img src="assets/icon/tech/next.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
+                    <h6>Next.js</h6>
+                </button>
+                <button class="logo">
+                    <img src="assets/icon/tech/tailwind.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
+                    <h6>Tailwind</h6>
+                </button>
+                <button class="logo">
+                    <img src="assets/icon/tech/node.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
+                    <h6>Node.js</h6>
+                </button>
+                <button class="logo">
+                    <img src="assets/icon/tech/express.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
+                    <h6>Express.js</h6>
+                </button>
+                <button class="logo">
+                    <img src="assets/icon/tech/typescript.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
+                    <h6>TypeScript</h6>
+                </button>
+                <button class="logo">
+                    <img src="assets/icon/tech/js.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
+                    <h6>JavaScript</h6>
+                </button>
+                <button class="logo">
+                    <img src="assets/icon/tech/postgree.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
+                    <h6>PostgreeSQL</h6>
+                </button>
+                <button class="logo">
+                    <img src="assets/icon/tech/mongodb.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
+                    <h6>MongoDB</h6>
+                </button>
+                <button class="logo">
+                    <img src="assets/icon/tech/net.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
+                    <h6>.NET</h6>
+                </button>
+                <button class="logo">
+                    <img src="assets/icon/tech/unity.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
+                    <h6>Unity</h6>
+                </button>
+            </marquee>
+        </div>
+    </section>
+    <!-- Tech Stack Session End -->
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </body>
 </html>
