--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="assets/icon/tab-icon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
-
+    <link rel="icon" href="assets/icon/tab-icon.ico" type="image/x-icon" />
     <title>Ahadi</title>
     <style>
       body {
@@ -15,13 +14,13 @@
         height: 3000px;
       }
 
-      button > h6{
+      button > h6 {
         font-size: 15px;
         color: rgb(66, 66, 66);
       }
     </style>
   </head>
-  <body class="pt-16 ps-15  pe-15">
+  <body id="home" class="pt-16 ps-15 pe-15">
     <!-- Awal Navbar -->
     <nav class="bg-white border-gray-200 fixed top-0 left-0 w-full h-16 z-50">
       <div class="flex justify-between p-2 ml-6">
@@ -40,16 +39,16 @@
               <a href="#project" class="text-gray-500 rounded-sm md:border-0 hover:text-black md:p-0 md:dark:hover:bg-transparent font-normal">Projects</a>
             </li>
             <li>
-              <a href="" class="flex align-middle text-white bg-green-500 hover:bg-green-600 rounded-lg text-sm px-4 py-2">
+              <a target="_blank" href="https://wa.me/6283891495814" class="flex align-middle text-white bg-green-500 hover:bg-green-600 rounded-lg text-sm px-4 py-2">
                 <img class="" src="assets/icon/wa.svg" alt="" width="15px" />
                 &nbsp Let's Talk
               </a>
             </li>
             <li>
-              <a href="" class="flex align-middle text-white bg-black hover:bg-gray-800 rounded-lg text-sm px-4 py-2 me-3">
+              <button download src="assets/img/mentor.png" class="download flex align-middle text-white bg-black hover:bg-gray-800 rounded-lg text-sm px-4 py-2 me-3">
                 <img src="assets/icon/download.png" alt="" class="flex align-middle" width="15px" height="20px" />
                 &nbsp Download CV
-              </a>
+              </button>
             </li>
             <li>
               <button class="me-9 flex">
@@ -65,7 +64,7 @@
     <!-- Akhir Navbar -->
 
     <!-- Hero Section Start -->
-    <section id="home" class="pt-30">
+    <section class="pt-30">
       <div class="container">
         <div class="flex alex-wrap">
           <div class="w-1/2 self-start w-xs rounded-lg pt-10">
@@ -87,14 +86,14 @@
               <h1 class="flex items-center ms-1 text-gray-500">Available for new projects</h1>
             </div>
             <button class="flex space-x-4 mt-10 ms-3">
-                <a href="" class="flex align-middle text-white bg-green-500 hover:bg-green-600 rounded-lg text-lg px-7 py-3 font-medium">
-                  <img class="" src="assets/icon/wa.svg" alt="" width="20px" />
-                  &nbsp Let's Talk
-                </a>
-                <a href="" class="flex align-middle text-white bg-black hover:bg-gray-800 rounded-lg text-lg px-7 py-3 font-medium">
-                  <img src="assets/icon/download.png" alt="" class="flex align-middle" width="20px" height="15px" />
-                  &nbsp Download CV
-                </a>
+              <a href="" class="flex align-middle text-white bg-green-500 hover:bg-green-600 rounded-lg text-lg px-7 py-3 font-medium">
+                <img class="" src="assets/icon/wa.svg" alt="" width="20px" />
+                &nbsp Let's Talk
+              </a>
+              <a href="assets/cv.pdf" download class="flex align-middle text-white bg-black hover:bg-gray-800 rounded-lg text-lg px-7 py-3 font-medium">
+                <img src="assets/icon/download.png" alt="" class="flex align-middle" width="20px" height="15px" />
+                &nbsp Download CV
+              </a>
             </button>
           </div>
         </div>
@@ -103,61 +102,62 @@
     <!-- Hero Section End -->
 
     <!-- Tech Stack Session Start -->
-    <section id="tech-stack" class="pt-30">
-        <h1 class="font-bold text-3xl">Tech Stack - Tools I Use Everyday</h1>
-        <div class="running-tech pt-20">
-            <marquee behavior="" direction="right" scrollamount="3" class="flex space-x-16">
-                <button class="logo">
-                    <img src="assets/icon/tech/react.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
-                    <h6>React</h6>
-                </button>
-                <button class="logo">
-                    <img src="assets/icon/tech/next.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
-                    <h6>Next.js</h6>
-                </button>
-                <button class="logo">
-                    <img src="assets/icon/tech/tailwind.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
-                    <h6>Tailwind</h6>
-                </button>
-                <button class="logo">
-                    <img src="assets/icon/tech/node.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
-                    <h6>Node.js</h6>
-                </button>
-                <button class="logo">
-                    <img src="assets/icon/tech/express.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
-                    <h6>Express.js</h6>
-                </button>
-                <button class="logo">
-                    <img src="assets/icon/tech/typescript.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
-                    <h6>TypeScript</h6>
-                </button>
-                <button class="logo">
-                    <img src="assets/icon/tech/js.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
-                    <h6>JavaScript</h6>
-                </button>
-                <button class="logo">
-                    <img src="assets/icon/tech/postgree.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
-                    <h6>PostgreeSQL</h6>
-                </button>
-                <button class="logo">
-                    <img src="assets/icon/tech/mongodb.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
-                    <h6>MongoDB</h6>
-                </button>
-                <button class="logo">
-                    <img src="assets/icon/tech/net.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
-                    <h6>.NET</h6>
-                </button>
-                <button class="logo">
-                    <img src="assets/icon/tech/unity.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700">
-                    <h6>Unity</h6>
-                </button>
-            </marquee>
-        </div>
+    <section id="tech-stack" class="pt-40">
+      <h1 class="font-bold text-3xl">Tech Stack - Tools I Use Everyday</h1>
+      <div class="running-tech pt-20">
+        <marquee behavior="" direction="right" scrollamount="3" class="flex space-x-16">
+          <button class="logo">
+            <img src="assets/icon/tech/react.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>React</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/next.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>Next.js</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/tailwind.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>Tailwind</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/node.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>Node.js</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/express.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>Express.js</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/typescript.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>TypeScript</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/js.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>JavaScript</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/postgree.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>PostgreeSQL</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/mongodb.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>MongoDB</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/net.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>.NET</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/unity.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>Unity</h6>
+          </button>
+        </marquee>
+      </div>
     </section>
     <!-- Tech Stack Session End -->
 
-
-
+    <section id="experience" class="pt-40">
+      <h1 class="font-bold text-3xl">Work Experience:</h1>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </body>
 </html>
