--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
     <link rel="icon" href="assets/icon/tab-icon.ico" type="image/x-icon" />
+
     <title>Ahadi</title>
     <style>
+      @tailwind base;
+      @tailwind components;
+      @tailwind utilities;
       body {
         font-family: Poppins;
         height: 3000px;
@@ -86,7 +90,7 @@
               <h1 class="flex items-center ms-1 text-gray-500">Available for new projects</h1>
             </div>
             <button class="flex space-x-4 mt-10 ms-3">
-              <a href="" class="flex align-middle text-white bg-green-500 hover:bg-green-600 rounded-lg text-lg px-7 py-3 font-medium">
+              <a target="_blank" href="https://wa.me/6283891495814" class="flex align-middle text-white bg-green-500 hover:bg-green-600 rounded-lg text-lg px-7 py-3 font-medium">
                 <img class="" src="assets/icon/wa.svg" alt="" width="20px" />
                 &nbsp Let's Talk
               </a>
@@ -150,14 +154,20 @@
             <img src="assets/icon/tech/unity.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
             <h6>Unity</h6>
           </button>
+        </div>
         </marquee>
       </div>
     </section>
     <!-- Tech Stack Session End -->
 
+    <!-- Experience Session Start -->
     <section id="experience" class="pt-40">
       <h1 class="font-bold text-3xl">Work Experience:</h1>
     </section>
+    <!-- Experience Session End -->
+
+    <!--Project Session Start -->
+    <!--Project Session End -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </body>
 </html>
