--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
@@ -105,8 +106,9 @@
     <!-- Tech Stack Session Start -->
     <section id="tech-stack" class="pt-40">
       <h1 class="font-bold text-3xl">Tech Stack - Tools I Use Everyday</h1>
-      <div class="running-tech pt-20">
-        <marquee behavior="" direction="right" scrollamount="3" class="flex space-x-16">
+        <div class="marquee pt-20">
+          <div class="marquee-content flex space-x-18">
+        <!-- <marquee behavior="" direction="right" scrollamount="3" class="flex space-x-16"> -->
           <button class="logo">
             <img src="assets/icon/tech/react.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
             <h6>React</h6>
@@ -151,8 +153,54 @@
             <img src="assets/icon/tech/unity.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
             <h6>Unity</h6>
           </button>
+
+            <button class="logo">
+            <img src="assets/icon/tech/react.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>React</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/next.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>Next.js</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/tailwind.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>Tailwind</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/node.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>Node.js</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/express.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>Express.js</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/typescript.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>TypeScript</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/js.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>JavaScript</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/postgree.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>PostgreeSQL</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/mongodb.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>MongoDB</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/net.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>.NET</h6>
+          </button>
+          <button class="logo">
+            <img src="assets/icon/tech/unity.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
+            <h6>Unity</h6>
+          </button>
+        <!-- </marquee> -->
+          </div>
         </div>
-        </marquee>
       </div>
     </section>
     <!-- Tech Stack Session End -->
