--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
           <div class="w-1/2 self-start w-xs rounded-lg pt-10">
             <img src="assets/img/mentor.png" alt="" class="rounded-xl shadow-xl/20" />
           </div>
-          <div class="content w-7/12 ms-20">
+          <div class="content w-7/12 ms-25">
             <h1 class="text-6xl font-bold">Hi, I'm Ahadi 👋</h1>
-            <h2 class="text-2xl font-normal mt-5 text-gray-700">Indie Hacker & Full-Stack Developer</h2>
-            <p class="text-lg font-normal mt-5 text-gray-500">
+            <h2 class="text-2xl font-semibold mt-5 text-gray-600">Indie Hacker & Full-Stack Developer</h2>
+            <p class="text-base font-normal mt-5 text-gray-700">
               I build and ship digital products from scratch to production. Passionate about creating end-to-end solutions and turning ideas into fully functional applications. With expertise in both frontend and backend development, I
               handle everything from initial concept to deployment and maintenance.
             </p>
