--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
       <h1 class="font-bold text-3xl">Tech Stack - Tools I Use Everyday</h1>
         <div class="marquee pt-20">
           <div class="marquee-content flex space-x-18">
-        <!-- <marquee behavior="" direction="right" scrollamount="3" class="flex space-x-16"> -->
           <button class="logo">
             <img src="assets/icon/tech/react.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
             <h6>React</h6>
@@ -198,7 +197,6 @@
             <img src="assets/icon/tech/unity.png" alt="" class="size-17 shadow-xs p-3 hover:shadow-lg rounded-md mb-3 transition duration-700" />
             <h6>Unity</h6>
           </button>
-        <!-- </marquee> -->
           </div>
         </div>
       </div>
@@ -539,10 +537,10 @@
     <!-- Footer -->
     <Footer class="mt-40">
       <hr class="text-gray-200 font-medium">
-      <div class="justify-center text-center mt-8">
+      <div class="justify-center text-gray-600 text-center mt-8 text-sm">
        <p>&copy; <script>document.write(new Date().getFullYear());</script> Designed and coded with ❤️ by Ahadi</p>
       </div>
-      <div class="flex justify-center mt-5 space-x-4 mb-10">
+      <div class="flex justify-center mt-4 space-x-3 mb-8">
         <a href="https://github.com/ahaydeid" target="_blank">
           <img src="assets/icon/github.png" alt=""  class="w-5">
         </a>
